[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/flower.gd" type="Script" id=1]
[ext_resource path="res://assets/flowers/flower-white-active.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="Flower" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Ellipse" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0.944059, -0.662046 )
scale = Vector2( 0.552829, 0.770013 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_collision"]

[connection signal="body_exited" from="." to="." method="_on_collision_end"]

[connection signal="timeout" from="Timer" to="." method="_on_timeout"]


